--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,11 @@ PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [compat]
+CSV = "0.7, 0.8"
+DataFrames = "1.0, 1.1"
+NaturalSort = "1"
+PooledArrays = "1.1"
+Requires = "1.1"
 julia = "1.5"
 
 [extras]
