--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 NaturalSort = "c020b1a1-e9b0-503a-9c33-f039bfc54a85"
 PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 CSV = "0.7, 0.8"
