--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-CSV = "0.7, 0.8"
+CSV = "0.8"
 DataFrames = "1.0, 1.1"
 NaturalSort = "1"
 PooledArrays = "1.1"
