--- a/Project.toml
+++ b/Project.toml
@@ -5,20 +5,20 @@ version = "0.7.0"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 NaturalSort = "c020b1a1-e9b0-503a-9c33-f039bfc54a85"
 PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+VariantCallFormat = "28eba6e3-a997-4ad9-87c6-d933b8bca6c1"
 
 [compat]
 CSV = "0.8"
 DataFrames = "1.0, 1.1"
 NaturalSort = "1"
 PooledArrays = "1.1"
-Requires = "1.1"
 StaticArrays = "1"
 StatsBase = "0.33"
 julia = "1.5"
