--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,10 +1,11 @@
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-GZip = "92fee26a-97fe-5a0c-ad85-20a5f3185b63"
+NaturalSort = "c020b1a1-e9b0-503a-9c33-f039bfc54a85"
 PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 VariantCallFormat = "28eba6e3-a997-4ad9-87c6-d933b8bca6c1"
