--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ NaturalSort = "1"
 PooledArrays = "1.1"
 StaticArrays = "1"
 StatsBase = "0.33"
+VariantCallFormat = "0.5"
 julia = "1.5"
 
 [extras]
