--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ VariantCallFormat = "28eba6e3-a997-4ad9-87c6-d933b8bca6c1"
 
 [compat]
 CSV = "0.8"
+CodecZlib = "0.7"
 DataFrames = "1.0, 1.1"
 NaturalSort = "1"
 PooledArrays = "1.1"
