--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ PooledArrays = "1.1"
 StaticArrays = "1"
 StatsBase = "0.33"
 VariantCallFormat = "0.5"
-julia = "1.5"
+julia = "1.5, 1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
