--- a/.github/workflows/pkgtests.yaml
+++ b/.github/workflows/pkgtests.yaml
@@ -1,4 +1,4 @@
-name: dev_ci
+name: pkgtests
 on:
   pull_request:
     branches: [dev]
@@ -13,6 +13,7 @@ jobs:
         version:
           - '1.5'
           - '1.6'
+          - 'nightly'
         os:
           - ubuntu-latest
           - macOS-latest
