--- a/.github/workflows/pkgtests.yaml
+++ b/.github/workflows/pkgtests.yaml
@@ -13,7 +13,7 @@ jobs:
         version:
           - '1.5'
           - '1.6'
-          - 'nightly'
+          #- 'nightly'
         os:
           - ubuntu-latest
           - macOS-latest
