--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PopGenCore"
 uuid = "45b36091-5ef7-4b08-b448-aaf24c763a14"
 authors = ["Pavel Dimens"]
-version = "0.6.0"
+version = "0.6.0-dev"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -21,7 +21,7 @@ PooledArrays = "1.1"
 StaticArrays = "1"
 StatsBase = "0.33"
 VariantCallFormat = "0.5"
-julia = "1.5, 1.6"
+julia = "1.5, 1.6, 1.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
